# iori

./: .gitignore  AGENT.md  Cargo.toml  README-DEBUG.md  README.md  flake.nix
.github/workflows/: build.yaml  release.yaml
.versions/: shiori
crates/iori/: Cargo.toml
crates/iori-ffmpeg/: Cargo.toml
crates/iori-ffmpeg/src/: error.rs  lib.rs
crates/iori-hls/: Cargo.toml
crates/iori-hls/src/: error.rs  lib.rs  m3u8_rs.rs  models.rs  parse.rs
crates/iori-hls/tests/: cases.rs  discontinuity.rs
crates/iori-hls/tests/fixtures/: archive_01.m3u8  archive_03.m3u8  radiko_01.m3u8
crates/iori-hls/tests/fixtures/discontinuity/: no_seq.m3u8  playlist.m3u8  playlist2.m3u8
crates/iori/examples/: dash_archive.rs  dash_live.rs  pipe.rs
crates/iori/src/: cache.rs  context.rs  decrypt.rs  error.rs  fetch.rs  lib.rs  merge.rs  segment.rs  util.rs
crates/iori/src/cache/: file.rs  memory.rs  opendal.rs  stream_dir.rs
crates/iori/src/dash/: archive.rs  live.rs  mod.rs  segment.rs  template.rs
crates/iori/src/dash/live/: clock.rs  timeline.rs
crates/iori/src/download/: app.rs  mod.rs  parallel.rs  sequencial.rs  sequential.rs
crates/iori/src/hls/: archive.rs  live.rs  mod.rs  segment.rs  source.rs  utils.rs
crates/iori/src/merge/: auto.rs  concat.rs  ffmpeg.rs  pipe.rs  proxy.rs  skip.rs
crates/iori/src/merge/auto/: mkvmerge.rs
crates/iori/src/raw/: http.rs  mod.rs  segments.rs
crates/iori/src/util/: http.rs  mod.rs  ordered_stream.rs  path.rs  range.rs
crates/iori/tests/: source.rs  streaming.rs
crates/iori/tests/dash/: dash_mpd_rs.rs  mod.rs  static.rs
crates/iori/tests/downloader/: mod.rs  parallel.rs  sequential.rs
crates/iori/tests/hls/: m3u8_rs.rs  mod.rs  rfc8216.rs
crates/ssa/: Cargo.toml
crates/ssa/benches/: decrypt.rs
crates/ssa/src/: lib.rs
crates/uri-match/: Cargo.toml
plugins/plugin/: Cargo.toml
plugins/plugin-eplus/: Cargo.toml
plugins/plugin-eplus/src/: lib.rs
plugins/plugin-example/: Cargo.toml
plugins/plugin-example/src/: lib.rs
plugins/plugin-gigafile/: Cargo.toml
plugins/plugin-gigafile/src/: lib.rs
plugins/plugin-niconico/: Cargo.toml
plugins/plugin-niconico/src/: lib.rs
plugins/plugin-radiko/: Cargo.toml
plugins/plugin-radiko/src/: lib.rs
plugins/plugin-sheeta/: Cargo.toml
plugins/plugin-sheeta/src/: lib.rs
plugins/plugin-showroom/: Cargo.toml
plugins/plugin-showroom/src/: lib.rs
plugins/plugin/src/: lib.rs
plugins/shiori-plugin/src/: lib.rs
