[workspace]
members = ["bin/*", "crates/*", "plugins/*", "platforms/*"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Yesterday17 <mmf@mmf.moe>"]
repository = "https://github.com/Yesterday17/iori"
license = "Apache-2.0"

[workspace.dependencies]
iori = { path = "crates/iori" }
iori-ssa = { path = "crates/ssa" }

iori-nicolive = { path = "platforms/nicolive" }
iori-showroom = { path = "platforms/showroom" }
iori-gigafile = { path = "platforms/gigafile" }
iori-sheeta = { path = "platforms/sheeta" }
iori-radiko = { path = "platforms/radiko" }

shiori-plugin = { path = "plugins/plugin" }
shiori-plugin-showroom = { path = "plugins/plugin-showroom" }
shiori-plugin-sheeta = { path = "plugins/plugin-sheeta" }
shiori-plugin-niconico = { path = "plugins/plugin-niconico" }
shiori-plugin-gigafile = { path = "plugins/plugin-gigafile" }
shiori-plugin-radiko = { path = "plugins/plugin-radiko" }

uri-match = { path = "crates/uri-match" }

regex = "1.9.3"
base64 = "0.22.1"
tokio = { version = "1", features = ["signal", "process", "net", "io-std"] }

fake_user_agent = "0.2.1"
anyhow = "1.0"
thiserror = "2"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.0"
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"

aes = "0.8.4"
cbc = { version = "0.1.2", features = ["std"] }

reqwest = { version = "^0.12.24", default-features = false, features = [
    "rustls-tls",
    "stream",
    "json",
    "socks",
    "cookies",
] }
chrono = "0.4"

clap = { version = "4.5.34", features = ["derive", "env"] }

async-recursion = "1.1.1"

rand = "0.9.2"
getrandom = { version = "0.2", features = ["js"] }

dash-mpd = { version = "0.18", default-features = false, features = ["scte35"] }
