[package]
name = "iori"
version = "0.0.1"
description = "A brand new m3u8 stream downloader"

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
iori-ssa.workspace = true

async-recursion.workspace = true
log.workspace = true
tracing.workspace = true
iori-hls.workspace = true
reqwest.workspace = true
tokio.workspace = true

aes.workspace = true
cbc.workspace = true
hex = "0.4.3"
mp4decrypt = "0.5.1"
tempfile = "3"
rand.workspace = true
thiserror.workspace = true
url = { version = "2.5.0", features = ["serde"] }
dash-mpd.workspace = true
regex.workspace = true
bytes = "1.6.0"
serde = { workspace = true, features = ["derive"] }
chrono.workspace = true
shlex = "1.3.0"
which = "7.0.2"
reqwest_cookie_store = "0.9.0"
serde_json.workspace = true
tokio-util = { version = "0.7.15", features = ["io"] }
futures = "0.3.31"
sanitize-filename-reader-friendly = "2.3.0"
opendal = { version = "0.55.0", optional = true }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
command-fds = { version = "0.3.0", features = ["tokio"] }

[features]
default = []
opendal = ["dep:opendal", "tokio-util/compat"]
opendal-fs = ["opendal/services-fs"]
opendal-s3 = ["opendal/services-s3"]
proxy = ["dep:axum", "dep:tower", "dep:tower-http"]

[dev-dependencies]
anyhow.workspace = true
pretty_env_logger = "0.5.0"
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
wiremock = "0.6.3"

[[example]]
name = "pipe"
required-features = ["tokio/full"]

[[example]]
name = "dash_live"
required-features = ["tokio/full"]
