[package]
name = "shiori-plugin-niconico"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
shiori-plugin.workspace = true
anyhow.workspace = true
tokio.workspace = true
iori-nicolive.workspace = true

chrono.workspace = true
tracing.workspace = true